* Fixed iOS issues with password input * Added SSID wrapping for unusually long network names * Fixed need for left/right scrolling on small phone screens (e.g. iPhone 4/5) * iOS devices now automatically open the screen after connecting to the MYCROFT network * Tweaked Wifi setup instruction wording to make it easier to understand * Fixed a potential bug with the flag used to stop the connection monitor

--- a/mycroft/client/wifisetup/web/css/style.css
+++ b/mycroft/client/wifisetup/web/css/style.css
@@ -6,11 +6,28 @@
     -ms-user-select: none;
 }
 
+/* Prevent ridiculously long network names from screwing up the layout
+   by forcing them to wrap. */
+.ssid {
+    max-width: 280px;
+}
+
+/* A bug in Safari (as of 10-10-2016) breaks password input when
+   user-select:none is used.  This prevents that bug by allowing
+   text selection for all input fields (which is probably expected
+   by users anyway). */
+input {
+    user-select: text;
+    -moz-user-select: text;
+    -webkit-user-select: text;
+    -ms-user-select: text;
+}
+
 .panel {
     border-radius: 15px;
     box-shadow: 0 0 10px #AAA;
     max-width: 500px;
-    min-width: 320px;
+    min-width: 300px;
 }
 
 .panel .title {
